# azure-devops-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  deploy-container.sh  main.py  pyproject.toml  security-scan.sh
.github/workflows/: pr-verify.yml
app/: config.py  devops_client.py  models.py
libs/: config.py  devops_client.py  models.py
security-scan-results/: security_checklist.md
