[project]
name = "azure-devops-mcp"
version = "1.0.0"
description = "This Python project provides a local and remote MCP server for Azure DevOps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]
